[workspace]

members = [
    "p2015_01",
    "p2015_02",
    "p2015_03",
    "p2015_04",
    "p2015_05",
    "p2015_06",
    "p2015_07",
    "p2015_08",
    "p2015_09",
    "p2015_10",
    "p2015_11",
    "p2015_12",
    "p2015_13",
    "p2015_14",
    "p2015_15",
    "p2015_16",
    "p2015_17",
    "p2015_18",
    "p2015_19",
    "p2015_20",
    "p2015_21",
    "p2015_22",
    "p2015_23",
    "p2015_24",
    "p2015_25",
    "p2019_01",
    "p2019_02",
    "p2019_03",
    "p2019_04",
    "p2019_05",
    "p2019_06",
    "p2019_07",
    "p2019_08",
    "p2019_09",
    "p2019_10",
    "p2019_12",
    "p2019_11",
    "p2019_13",
    "p2019_15",
    "p2019_17",
    "p2019_19",
    "p2019_16",
    "p2018_01",
    "p2018_02",
    "p2018_03",
    "p2022_01",
    "p2022_02",
    "p2022_03",
    "p2022_04",
    "p2022_05",
    "p2022_06",
    "p2022_07",
    "p2022_08",
    "p2022_09",
    "p2022_10",
    "p2022_11",
    "p2022_12",
    "p2022_13",
    "p2022_14",
    "p2022_15",
    "p2022_16",
    "p2022_18",
    "p2022_17",
    "p2022_17b"
]